Inaccuracies have been eliminated and comments to java doc methods have been added